# pyqtribbon

./: .clang-format  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGE_LOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  binder_includes.hpp  main.cpp  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini  word.py
.github/: release-drafter.yml  release.yml
.github/workflows/: build.yml  clean-cache.yml  codeql.yml  pages.yaml  publish.yml  pytest.yaml  python-publish-pypi.yml  release-drafter.yml  test.yml  tests.yml
bindings/: CMakeLists.txt  qtribbon.cpp
docs/: requirements.txt
docs/source/: apidoc.rst  conf.py  getting-started.rst  index.rst  references.rst  ribbon.rst  tutorial-mainwindow.py  tutorial-ribbonbar.py  tutorials.rst  user.rst
docs/source/_examples/: build.py  category.py  panel.py  ribbonbar-customize.py  ribbonbar.py  tutorial-ribbonbar.py
docs/source/_screenshots/: category.py  panel.py  ribbonbar-customize.py  ribbonbar.py
examples/: word.py
icons/: default.qss
include/: CMakeLists.txt  main.cpp
include/qtribbon/: category.hpp  constants.hpp  gallery.hpp  menu.hpp  panel.hpp  resources.qrc  ribbonbar.hpp  separator.hpp  tabbar.hpp  titlewidget.hpp  toolbutton.hpp
pyqtribbon/: __init__.py  category.py  categorylayoutwidget.py  constants.py  functools.py  gallery.py  logger.py  mainwindow.py  menu.py  panel.py  panel.pyi  qt.py  qtpy.py  ribbonbar.py  screenshotwindow.py  separator.py  tabbar.py  titlewidget.py  toolbutton.py  typehints.py  utils.py  version.py
pyqtribbon/styles/: default.qss
pyqtribbon/utils/: __init__.py
qtribbon/: CMakeLists.txt  category.hpp  gallery.hpp  main.cpp  menu.hpp  panel.hpp  ribbonbar.hpp  separator.hpp  titlewidget.hpp  toolbutton.hpp  utils.hpp
requirements/: PyQt6.txt  PySide2.txt  PySide6.txt  dev.txt
ribbon/: Qt.py  __init__.py  buton.py  category.py  categorylayoutwidget.py  gallery.py  groupbutton.py  mainwindow.py  menu.py  panel.py  ribbon.py  ribbonbar.py  screenshotwindow.py  section.py  separator.py  tabbar.py  tabwidget.py  titlewidget.py  toolbutton.py  typehints.py  utils.py
ribbon/tests/: __init__.py  screenshotwindow.py
styles/: AMOLED.qss  Aqua.qss  Chatbee.qss  Clientor.qss  Clocker.qss  ConsoleStyle.qss  Cstartpage.qss  Darkeum.qss  Debug.qss  DeepBox.qss  Devsion.qss  Diplaytap.qss  Dtor.qss  EasyCode.qss  ElegantDark.qss  ExcelOffice.qss  Fibers.qss  Fibrary.qss  Filmovio.qss  Genetive.qss  Geoo.qss  Gravira.qss  HackBook.qss  Hookmark.qss  Incrypt.qss  Integrid.qss  Irrorater.qss  MacOS.qss  MailSy.qss  ManjaroMix.qss  MaterialDark.qss  Medize.qss  Mixchat.qss  NeonButtons.qss  Obit.qss  Perstfic.qss  Photoxo.qss  PicPax.qss  Remover.qss  Scalcula.qss  (+13 more)
tests/: test_categories.py  test_category.py  test_filemenu.py  test_gallery.py  test_main.py  test_mainwindow.py  test_panel.py  test_ribbonbar.py  test_titlewidget.py  test_use_dictionary_to_create_widgets.py
