# pyproject.toml, for more information about configuration options, see
# https://setuptools.pypa.io/en/stable/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqtribbon"
authors = [
  { name="WANG Hailin", email="hailin.wang@connect.polyu.hk" },
]
description = "Ribbon Bar for PyQt or PySide applications"
readme = "README.md"
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
"GitHub" = "https://github.com/haiiliin/pyqtribbon"
"Documentation" = "https://pyqtribbon.haiiliin.com/en/stable/"

[tool.setuptools]
packages = ['pyqtribbon']

[tool.setuptools.package-data]
pyqtribbon = ["icons/*", "styles/*"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements/deps.txt"]

[tool.setuptools.dynamic.optional-dependencies]
dev.file = ["requirements/dev.txt"]
docs.file = ["docs/requirements.txt"]
PyQt5.file = ["requirements/PyQt5.txt"]
PyQt6.file = ["requirements/PyQt6.txt"]
PySide2.file = ["requirements/PySide2.txt"]
PySide6.file = ["requirements/PySide6.txt"]

[tool.setuptools_scm]
root = "."
version_scheme = "post-release"
write_to = "pyqtribbon/_version.py"
fallback_version = "0.0.0-unknown"

[tool.pytest.ini_options]
testpaths = ["pyqtribbon", "tests"]
addopts = "-rf -s --cov=pyqtribbon --cov-report=xml --cov-report=html --cov-report=term-missing --doctest-modules"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '(pyqtribbon/.*\.py|tests/.*\.py)'
