# pyproject.toml, for more information about configuration options, see
# https://setuptools.pypa.io/en/stable/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqtribbon"
authors = [
  { name="WANG Hailin", email="hailin.wang@connect.polyu.hk" },
]
description = "Ribbon Bar for PyQt or PySide applications"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dependencies = ["numpy", "qtpy"]

[project.urls]
"GitHub" = "https://github.com/haiiliin/pyqtribbon"
"Documentation" = "https://pyqribbon.readthedocs.io/en/stable/"

[project.optional-dependencies]
dev = [
    "coveralls",
    "coverage",
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "tox",
]
docs = [
    "PyQt5",
    "sphinx",
    "sphinxcontrib-apidoc",
    "sphinx-codeautolink",
    "sphinx-copybutton",
    "sphinx-hoverxref",
    "sphinx-rtd-theme",
    "sphinx-toolbox",
    "sphinx-qt-documentation",
]
pyqt5 = ["PyQt5"]
pyqt6 = ["PyQt6"]
pyside2 = ["PySide2"]
pyside6 = ["PySide6"]

[tool.setuptools]
packages = ['pyqtribbon']

[tool.setuptools.package-data]
pyqtribbon = ["icons/*", "styles/*"]

[tool.setuptools_scm]
write_to = "pyqtribbon/_version.py"

[tool.pytest.ini_options]
testpaths = ["pyqtribbon", "tests"]
addopts = "-rf -s --cov=pyqtribbon --cov-report=xml --cov-report=html --cov-report=term-missing --doctest-modules"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '(pyqtribbon/.*\.py|tests/.*\.py|docs/source/conf\.py)'

[tool.isort]
profile = "black"
